compiler/typ/tests/fixtures/diagnostics/0550_functor_opaque_result_operator_mismatch_01.ml.infer.expected
File "0550_functor_opaque_result_operator_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0550_functor_opaque_result_operator_mismatch_01 is not a valid module name.

File "0550_functor_opaque_result_operator_mismatch_01.ml", line 22, characters 8-19:
22 | let _ = Out_alpha.y + 1
             ^^^^^^^^^^^
Error: The value Out_alpha.y has type Out_alpha.u = Make_alpha(Input_alpha).u
       but an expression was expected of type int
